--- a/OledI2C_Converter.html
+++ b/OledI2C_Converter.html
@@ -413,7 +413,7 @@ Copyright (c) 2016 by Fabrice Weinberg
       <summary>Preview</summary>
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-direction: row;">
         <textarea id="previewText" rows="1" style="resize: none; overflow: hidden;"
-          oninput="renderGlyphPreview();"></textarea>
+          oninput="renderGlyphPreview();">Test 123!</textarea>
         <canvas id="previewCanvas" width="128" height="64" style="border:1px solid gray;height: 96px;"></canvas>
 
       </div></canvas>
