--- a/OledI2C_Converter.html
+++ b/OledI2C_Converter.html
@@ -157,7 +157,7 @@ Copyright (c) 2016 by Fabrice Weinberg
       height: fit-content;
       padding: 4px;
       border-radius: 4px;
-      /*background: #eceaea;*/
+      background: #eceaea;
       cursor: default;
       box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 1);
     }
